# PyDDSBB

./: .gitignore  LICENSE  README.md  app_pyddsbb_minimize_2d.py  packages.txt  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: draft-pdf.yml
Examples/: DDSBB Algorithm.ipynb  Examples with multifidelity.ipynb  readme.md
PyDDSBB/: DDSBB.py  DDSBBModel.py  README.md  __init__.py  _machine_learning.py  _node.py  _problem.py  _splitter.py  _underestimators.py  _utilis.py
paper/: paper.bib  paper.md
src/PyDDSBB/: __init__.py  _node.py  _problem.py  _underestimators.py  _utilis.py
tests/: conftest.py  test_ddsbb.py  test_ddsbbmodel.py  test_machine_learning.py  test_node.py  test_problem.py  test_splitter.py  test_tutorial_examples.py  test_underestimators.py  test_utilis.py
